--- a/The_Friends/volunteer.html
+++ b/The_Friends/volunteer.html
@@ -237,11 +237,11 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
 
 										   
 
-										   <h2>Call David Paul, Education and Volunteer Coordinator, at 
+										   <h2>Call Margi Bertram, Administrator, at 
 										   (661)-254-4584 for more information.<p>
 
 										   Or you can email at 
-										   <a href="mailto:dpaul@nhm.org">dpaul@nhm.org</a>.</h2>
+										   <a href="mailto:mbertram@nhm.org">mbertram@nhm.org</a>.</h2>
 
 
 										   <b>Especially needed -- Weekend volunteers</b>
