--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -116,7 +116,7 @@ function MM_swapImage() { //v3.0
 <p>
 Please join The Friends of Hart Park!  We are people in your community who volunteer their time and talents to support the park and museum facilities.  For many years, funds raised by the Friends have been used to help maintain the mansion, help with the animals in the park, and clean/restore numerous art treasures.
 <p>
-<b>By joining at any level, you will receive our quarterly newsletter, and be kept up to date on our events! Additionally, you can anjoy the benefits outlined below if you join at the Sponsor level and above.</b>
+<b>By joining at any level, you will receive our quarterly newsletter, and be kept up to date on our events! Additionally, you can enjoy the benefits outlined below if you join at the Sponsor level and above.</b>
 <p>
 All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
 </h4>
