Removed past events, and made Goin' Country the next event

--- a/index.htm
+++ b/index.htm
@@ -261,9 +261,9 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
-                                      title="Music in the Park" rel="lightbox[music]">
-                                      <img src="Event_Pages/musicInThePark2018-sm.png"/>
+                                      <a href= "Event_Pages/GoingCountryAtTheHart.jpg" 
+                                      title="Going Country at Hart" rel="lightbox[music]">
+                                      <img src="Event_Pages/GoinCountry2018.png"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -276,30 +276,6 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   <tbody>
                                     <tr>
                                       <td id="EventDate">Saturdays
-                                        May 12<sup>th</sup>,
-                                        June 2<sup>nd</sup> &amp;
-                                        June 16<sup>th</sup>
-                                        &mdash; 11am&ndash;2pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
-                                      title="Music in the Park" rel="lightbox[music]">
-                                      Free Country Music in the Park
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, May 19<sup>th</sup>&ndash;20<sup>th</sup>
-                                        10am&ndash;4pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/Artisan2018.png" 
-                                      title="Artisan Row Home Arts &amp; Crafts Show" rel="lightbox[artisan]">
-                                      Artisan Row Home Arts &amp; Crafts Show
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturdays
                                         May 26<sup>th</sup> &amp;
                                         July 28<sup>th</sup>
                                         &mdash; 7&ndash;10pm</td>
@@ -307,6 +283,18 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                       <a href= "Event_Pages/GoingCountryAtTheHart.jpg" 
                                       title="Going Country at Hart" rel="lightbox[music]">
                                       Goin' Country at Hart live music!
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturdays
+                                        June 2<sup>nd</sup> &amp;
+                                        June 16<sup>th</sup>
+                                        &mdash; 11am&ndash;2pm</td>
+                                      <td id="Event">
+                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
+                                      title="Music in the Park" rel="lightbox[music]">
+                                      Free Country Music in the Park
                                       </a>
                                       </td>
                                     </tr>
