Made this years big events be future (if lacking detail)

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -126,13 +126,13 @@ function MM_swapImage() { //v3.0
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											<h3 align="center">
-											Saturday, July 29<sup>th</sup>, 
-											2017 at 6pm</h3></span></TD>
+											Saturday, Aug. 11<sup>th</sup>, 
+											2018 at 6pm</h3></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<br><h1 align="center">Pictures coming soon!</h1><br><br>
+											<br><h1 align="center">Stay Tuned here for 2018 Details!</h1><br><br>
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
@@ -145,6 +145,7 @@ function MM_swapImage() { //v3.0
 														<td colspan="2">
 											<p>
 <p>
+<h3>Review of 2017's Silents Under the Stars</h3><br>
 The 2017 edition of Silents Under The Stars was a magical, fun, grand time for 230
 delighted guests. Once again, this starlight evening, which has become the highlight
 event of FOHP's calendar year, lived up to its billing and more. 
@@ -179,6 +180,7 @@ continuing maintenance and improvements at Hart Park.
 <i></p><p>Bill Blowers<br>
 8/5/2017</i>
 </p>
+<!--
 											<B class="EVNTC">The Event!</B>
 <p>
 <h1 align="center" class="silents">Silents Under the Stars:</h1><br>
@@ -223,7 +225,7 @@ Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle o
 														<td>
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												Evening Mansion Tours &amp; Patio Seating -- 
+												Evening Mansion Tours &amp; Patio Seating - 
 												6pm</font></span></td>
 													</tr>
 													<tr>
@@ -248,8 +250,9 @@ Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle o
 												<p align="left">
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												BBQ Dinner from Rattler&#8217;s -- 7pm</font></span></td>
+												BBQ Dinner from Rattler&#8217;s - 7pm</font></span></td>
 													</tr>
+-->
 												</table>
 											  </TD>
 											</TR>    
