--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -68,7 +68,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><b>24<sup>th</sup> Annual Hart of
+                      <p style="margin-top: 0"><b>25<sup>th</sup> Annual Hart of
                             the West Pow Wow</b></p>
                     </div>
                   </td>
@@ -173,7 +173,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
 William S. Hart County Park &amp; Museum<br>
 along with The Friends of Hart Park<br>
 were proud to present the<br></h2></p>
-                            <h2 align="center">24<sup>th</sup> Annual Hart of the West</h2>
+                            <h2 align="center">25<sup>th</sup> Annual Hart of the West</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
                             <p align="center"> <img
@@ -189,8 +189,8 @@ were proud to present the<br></h2></p>
                               </h2>
                     <hr>
 <p><h2 align="center">
-Saturday, September 30<sup>th</sup> &mdash; 10am to 7pm <br>
-Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
+Saturday, October 6<sup>th</sup> &mdash; 10am to 7pm <br>
+Sunday, October 7<sup>st</sup> &mdash; 10am to 6pm
 </h2><p>
 <h3 align="center">
                                           <p>Princess Contest &mdash; ages 14 to 21</p>
@@ -215,8 +215,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 M.C.
                                           </td>
                                           <td id="PowWowPerson">
-                                                Michael Whitehorse Avilas / 
-                                                Gabrieleno Tongva / So. Paiute / Shoshone
+                                            TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -224,7 +223,6 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Arena Director
                                           </td>
                                           <td id="PowWowPerson">
-                                                Victor Chavez / Dine'
                                           </td>
                                         </tr>
                                         <tr>
@@ -232,7 +230,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Spiritual Director
                                           </td>
                                           <td id="PowWowPerson">
-                                                Ted Garcia / Chumash
+                                            TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -242,7 +240,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Michael Runningwind / Seneca / Chiricahua Apache
+                                            TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -250,7 +248,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Headwoman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Janet Snyder / Dine'
+                                            TBA
                                           </td>
                                         </tr>
                                         <!--
@@ -285,7 +283,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Northern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                Blue Star
+                                            TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -293,7 +291,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                Hale & Company
+                                            TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -334,7 +332,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                     <p style="margin-bottom: 1px"> <b
                                         class="EVNTC">When?</b></p>
                                     <p style="margin-top: 0"><b> <font
-                                          color="#800000" size="5">2017
+                                          color="#800000" size="5">2018
                                           Schedule</font></b></p>
                                     <ul>
                                       <li><font color="#006600"><font
@@ -386,7 +384,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                         is with great pleasure that we
                                         invite you to experience a
                                         significant slice of Native
-                                        American culture at the 24<sup>th</sup>
+                                        American culture at the 25<sup>th</sup>
                                         Annual Hart of the West Powwow.
                                         We hope you will come and enjoy
                                         the dancers, drummers and the
