Fixed Typo in Pow Wow, and removed online shopping from Trading Post.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -190,7 +190,7 @@ were proud to present the<br></h2></p>
                     <hr>
 <p><h2 align="center">
 Saturday, October 6<sup>th</sup> &mdash; 10am to 7pm <br>
-Sunday, October 7<sup>st</sup> &mdash; 10am to 6pm
+Sunday, October 7<sup>th</sup> &mdash; 10am to 6pm
 </h2><p>
 <h3 align="center">
                                           <p>Princess Contest &mdash; ages 14 to 21</p>
