--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                                      <a href= "Event_Pages/GoingCountryAtTheHart.jpg" 
-                                      title="Going Country at Hart" rel="lightbox[music]">
-                                      <img src="Event_Pages/GoinCountry2018.png"/>
+                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
+                                      title="Music in the Park" rel="lightbox[music]">
+                                      <img src="Event_Pages/musicInThePark2018-sm.png"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -274,18 +274,6 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Saturdays
-                                        May 26<sup>th</sup> &amp;
-                                        July 28<sup>th</sup>
-                                        &mdash; 7&ndash;10pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/GoingCountryAtTheHart.jpg" 
-                                      title="Going Country at Hart" rel="lightbox[music]">
-                                      Goin' Country at Hart live music!
-                                      </a>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">Saturdays
                                         June 2<sup>nd</sup> &amp;
@@ -324,6 +312,14 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         &mdash; at Dusk</td>
                                       <td id="Event">
                                       Free Movies in the Park
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday
+                                        July 28<sup>th</sup>
+                                        &mdash; 7&ndash;10pm</td>
+                                      <td id="Event">
+                                      Goin' Country at Hart live music!
                                       </td>
                                     </tr>
                                     <tr>
