Added Silents 2018 with PayPal

--- a/index.htm
+++ b/index.htm
@@ -261,9 +261,16 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
-                                      title="Music in the Park" rel="lightbox[music]">
-                                      <img src="Event_Pages/musicInThePark2018-sm.png"/>
+                                      <a href= "Event_Pages/silents.html">
+                                      <h2>Get your Tickets today for this summer's</h2>
+                                      <img src="Event_Pages/silents/silents2018/2018silents.jpg"/>
+                                      </a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+                                      <a href= "Event_Pages/sax2018.jpg" 
+                                      title="Music in the Park" rel="lightbox[sax]">
+                                      <img src="Event_Pages/sax2018-sm.jpg"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -275,33 +282,14 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturdays
-                                        June 2<sup>nd</sup> &amp;
-                                        June 16<sup>th</sup>
-                                        &mdash; 11am&ndash;2pm</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/musicInThePark2018-med.png" 
-                                      title="Music in the Park" rel="lightbox[music]">
-                                      Free Country Music in the Park
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                        Saturday &amp; Sunday, June 9<sup>th</sup>&ndash;10<sup>th</sup>
-                                        10am&ndash;5pm</td>
-                                      <td id="Event">
-                                      <a target="_blank" href="http://www.scvquiltguild.org/Quilt_Show.htm">
-                                      SCV Quilt Show
-                                      <span><img src="images/ExternalLink.png"/></a></span>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">
                                         Sunday, June 24<sup>th</sup>
                                         6pm</td>
                                       <td id="Event">
-                                      &ldquo;Saxtravaganza&rdquo; Free Saxophone Chamber Music concert
+                                      <a href= "Event_Pages/sax2018.jpg" 
+                                      title="Music in the Park" rel="lightbox[sax]">
+                                      &ldquo;Saxtravaganza&rdquo; Free Saxophone Chamber Music concert              
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -327,7 +315,9 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         Saturday, Aug. 11<sup>th</sup>
                                         6pm</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/silents.html">
                                       &ldquo;Silents Under the Stars&rdquo;
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
