--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -119,23 +119,48 @@ function MM_swapImage() { //v3.0
 										<font size="5">The Friends Of Hart Park 
 										<br>
 										and the<br>
-&nbsp;William S. Hart Park &amp; Museum thank you for coming to:</font></span></span></p>
+&nbsp;William S. Hart Park &amp; Museum present:</font></span></span></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
+											<p align="center">
+											Join us on
 											<h3 align="center">
-											Saturday, Aug. 11<sup>th</sup>, 
+											Saturday, August 11<sup>th</sup>, 
 											2018 at 6pm</h3></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<br><h1 align="center">Stay Tuned here for 2018 Details!</h1><br><br>
+											<h3>Buy tickets here! </h3>
+											<h4>(select quantity on shopping cart page)</h4>
+
+<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="ET3FJ56SPRSHJ">
+<table>
+<tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
+	<option value="Individual Ticket">Individual Ticket $50.00 USD</option>
+	<option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
+</select> </td></tr>
+<tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+											<font size="4">To buy tickets over the phone, or for 
+											additional info, Call<br>(661) 222&ndash;9542</font></p>
+											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+											<span style="letter-spacing: normal">
+											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
+											<font size="4">Tickets are non-Refundable</font></span></span></p>
 											</TD>
 											</TR>
 											<TR>
@@ -144,52 +169,16 @@ function MM_swapImage() { //v3.0
 													<tr>
 														<td colspan="2">
 											<p>
-<p>
-<h3>Review of 2017's Silents Under the Stars</h3><br>
-The 2017 edition of Silents Under The Stars was a magical, fun, grand time for 230
-delighted guests. Once again, this starlight evening, which has become the highlight
-event of FOHP's calendar year, lived up to its billing and more. 
-
-</p><p>Entertainment, provided
-by the Saguaro Sisters with Will Ryan, is still being talked about. 
-Wagon Tracks was not only the best quality film yet seen at an Evening Under
-The Stars event, but it also showcased Bill Hart's dramatic acting ability. And of course,
-what would the evening be without Ray Lowe's musical accompaniment, marvelous as
-always with his original scores? Ray's musical ability to make these silent classics come
-to life is considered so important that the evening was moved from its usual spot in the
-middle of August to July 29<sup>th</sup> to accommodate his schedule.
-
-</p><p>Highlights of the evening included an address by L. A. County Supervisor Kathryn Barger
-and a presentation to long-term park manager Norm Phillips for his years of service and
-his close cooperation with FOHP.
-
-</p><p>Sherron Blowers and her amazing committee are to be congratulated on the effort,
-planning, long hours, and frustration that go into the production of the evening.
-Without the talent, contacts, experience, dedication and persistence of five very
-committed people, the event most likely would not even exist. Planning began back in
-April, and the quality of the evening reflected the effort.
-
-</p><p>There are many ways to evaluate the success of an event. No matter how it is measured,
-every metric that can be applied to the evening of July 29 will register at or near 12 on a
-scale of one to ten.
-
-</p><p>And to put a cherry on top of the fun and enjoyment, proceeds from Silent Auction
-bidding and ticket sales exceeded last years record total, all of which will go toward the
-continuing maintenance and improvements at Hart Park.
-
-<i></p><p>Bill Blowers<br>
-8/5/2017</i>
-</p>
-<!--
-											<B class="EVNTC">The Event!</B>
+											<B class="EVNTC">Just Announced!</B>
 <p>
 <h1 align="center" class="silents">Silents Under the Stars:</h1><br>
 <div>
-<img id="silentsrightthird" src="silents/WagonTracks.png" />
-<h2 align="center"><br>Featuring <em>William S. Hart</em> starring with his real-life sweetheart, 
-<em>Jane Novak</em> from 1919, &ldquo;<b>Wagon Tracks</b>&rdquo;</h2><br>
-<h3 align="center" class="silents">As always, our movie will be accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p>
-</h3>
+<img id="silentsrightthird" src="https://upload.wikimedia.org/wikipedia/commons/8/8f/The_Toll_Gate_%281920%29_-_Ad.jpg" />
+<h2 align="center" class="silents"><br><br>Featuring <em>William S. Hart</em> starring in his own production, 
+with a story co-written by his sister Mary Ellen Hart, also starring his favorite pinto 
+pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>&rdquo;</h2><br><br>
+<h2 align="center" class="silents">As always, our movie will be accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p>
+</h2>
 </div>
 <p align="center">
 										</td>
@@ -206,13 +195,18 @@ continuing maintenance and improvements at Hart Park.
 This year we're proud to showcase
 </h2>
 <h1 class="silents" align="center">
-The Saguaro Sisters with Will Ryan
-                                        <img class="centeredImage" alian="center" src="silents/SaguaroSisters.jpg"/>
+<a target="_blank" href="http://www.grateful-dudes.net/">
+The Grateful Dudes Cowboy Band
+</a>
+                                        <img class="centeredImage" align="center" src="silents/silents2018/TheGratefulDudes.jpg"/>
 </h1>
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle or, as they call it, &ldquo;Jazz on the Range&rdquo;, written and accompanied by guitarist, voice actor and comedian Will Ryan.
-</font></span>
+<h2 class="silents"> From our own town of Newhall, CA!
+<br>&ldquo;<b>WILL PICK FOR FOOD&rdquo;<br>
+The longest continuing bluegrass band in Southern California 
+for over 35+ years.
+</h2>
+</span>
                                         </p><br>
                                         <B class="EVNTC">But that's not all!...
                                         </font></span></span></p>
@@ -225,7 +219,7 @@ Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle o
 														<td>
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												Evening Mansion Tours &amp; Patio Seating - 
+												Evening Mansion Tours &amp; Patio Seating -- 
 												6pm</font></span></td>
 													</tr>
 													<tr>
@@ -250,9 +244,8 @@ Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle o
 												<p align="left">
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												BBQ Dinner from Rattler&#8217;s - 7pm</font></span></td>
+												BBQ Dinner from Rattler&#8217;s -- 7pm</font></span></td>
 													</tr>
--->
 												</table>
 											  </TD>
 											</TR>    
@@ -322,9 +315,9 @@ Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle o
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
-												Proceed to 
+												Proceed to Will Call at 
 												<a href="../Hart_Hall/hart_hall.html">Hart Hall</a>
-												to check in and join the fun!
+												to check in and pick up your ticket.
 												</font></span></p>
 												</span>
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
