Questionable claim requested by Sherron

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -203,7 +203,7 @@ The Grateful Dudes Cowboy Band
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 <h2 class="silents"> From our own town of Newhall, CA!
 <br>&ldquo;<b>WILL PICK FOR FOOD&rdquo;<br>
-The longest continuing bluegrass band in Southern California 
+The longest continuing western/bluegrass band in Southern California 
 for over 35+ years.
 </h2>
 </span>
