--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     </tr>
                                       <td id="EventDate">
                                         Thursday, July 19<sup>th</sup>
-                                        6pm</td>
+                                        6pm (New Date!)</td>
                                       <td id="Event">
                                       <a href= "Event_Pages/music2018/SAXTRAVAGANZA.JPG" 
                                       title="Music in the Park" rel="lightbox[sax]">
