Removed Coco, added 2nd Goin Country.

--- a/index.htm
+++ b/index.htm
@@ -268,17 +268,26 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                      <a href= "Event_Pages/movies2018/Coco.png" 
-                                      title="Movies in the Park" rel="lightbox[coco]">
-                                      <img src="Event_Pages/movies2018/Coco-sm.png"/>
-                                      </a>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                       <a href= "Event_Pages/music2018/SAXTRAVAGANZA.JPG" 
                                       title="Music in the Park" rel="lightbox[sax]">
                                       <img src="Event_Pages/music2018/SAXTRAVAGANZA-sm.JPG"/>
                                       </a>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+                                      <a href= "Event_Pages/music2018/GoinCountry.JPG" 
+                                      title="Music in the Park" rel="lightbox[goin]">
+                                      <img src="Event_Pages/music2018/GoinCountry-sm.JPG"/>
+                                      </a>
+                                    <!--
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+                                      <a href= "Event_Pages/movies2018/Jumanji.png" 
+                                      title="Movies in the Park" rel="lightbox[jumanji]">
+                                      <img src="Event_Pages/movies2018/Jumanji-sm.png"/>
+                                      </a>
+                                    -->
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -289,22 +298,6 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Fridays
-                                        July 13<sup>th</sup>,
-                                        Aug. 3<sup>rd</sup>,
-                                        Aug. 17<sup>th</sup>
-                                        &mdash; at Dusk</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/movies2018/Coco.png" 
-                                      title="Movies in the Park" rel="lightbox[movies2018]">
-                                      Free Movies in the Park
-                                      </a>
-                                      <a href= "Event_Pages/movies2018/Jumanji.png" 
-                                      title="Movies in the Park" rel="lightbox[movies2018]"/>
-                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
-                                      title="Movies in the Park" rel="lightbox[movies2018]"/>
-                                      </td>
-                                    </tr>
                                       <td id="EventDate">
                                         Thursday, July 19<sup>th</sup>
                                         6pm (New Date!)</td>
@@ -320,7 +313,24 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                         July 28<sup>th</sup>
                                          7&ndash;10pm</td>
                                       <td id="Event">
+                                      <a href= "Event_Pages/music2018/GoinCountry.JPG" 
+                                      title="Music in the Park" rel="lightbox[goin]">
                                       Goin' Country at Hart live music!
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Fridays
+                                        Aug. 3<sup>rd</sup>,
+                                        Aug. 17<sup>th</sup>
+                                        &mdash; at Dusk</td>
+                                      <td id="Event">
+                                      <a href= "Event_Pages/movies2018/Jumanji.png" 
+                                      title="Movies in the Park" rel="lightbox[movies2018]">
+                                      Free Movies in the Park
+                                      </a>
+                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
+                                      title="Movies in the Park" rel="lightbox[movies2018]"/>
                                       </td>
                                     </tr>
                                     <tr>
