--- a/index.htm
+++ b/index.htm
@@ -268,9 +268,9 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                      <a href= "Event_Pages/movies2018/Jumanji.png" 
-                                      title="Movies in the Park" rel="lightbox[jumanji]">
-                                      <img src="Event_Pages/movies2018/Jumanji-sm.png"/>
+                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
+                                      title="Movies in the Park" rel="lightbox[blackpanther]">
+                                      <img src="Event_Pages/movies2018/BlackPanther-sm.png"/>
                                       </a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -282,26 +282,23 @@ Click below for photos from Friends of Hart Park <i>2017 Year in Review</i><br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Fridays
-                                        Aug. 3<sup>rd</sup>,
-                                        Aug. 17<sup>th</sup>
-                                        &mdash; at Dusk</td>
-                                      <td id="Event">
-                                      <a href= "Event_Pages/movies2018/Jumanji.png" 
-                                      title="Movies in the Park" rel="lightbox[movies2018]">
-                                      Free Movies in the Park
-                                      </a>
-                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
-                                      title="Movies in the Park" rel="lightbox[movies2018]"/>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">
                                         Saturday, Aug. 11<sup>th</sup>
                                         6pm</td>
                                       <td id="Event">
                                       <a href= "Event_Pages/silents.html">
                                       &ldquo;Silents Under the Stars&rdquo;
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Friday
+                                        Aug. 17<sup>th</sup>
+                                        &mdash; at Dusk</td>
+                                      <td id="Event">
+                                      <a href= "Event_Pages/movies2018/BlackPanther.png" 
+                                      title="Movies in the Park" rel="lightbox[movies2018]">
+                                      Movie in the Park:  Black Panther
                                       </a>
                                       </td>
                                     </tr>
