Updated with new (shorter) times.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -187,8 +187,8 @@ are proud to present the<br></h2></p>
                               </h2>
                     <hr>
 <p><h2 align="center">
-Saturday, October 6<sup>th</sup> &mdash; 10am to 7pm <br>
-Sunday, October 7<sup>th</sup> &mdash; 10am to 6pm
+Saturday, October 6<sup>th</sup> &mdash; 11am to 6pm <br>
+Sunday, October 7<sup>th</sup> &mdash; 11am to 5pm
 </h2><p>
 <h3 align="center">
                                           <p>Princess Contest &mdash; ages 14 to 21</p>
@@ -332,8 +332,10 @@ Sunday, October 7<sup>th</sup> &mdash; 10am to 6pm
                                           color="#800000" size="5">2018
                                           Schedule</font></b></p>
                                     <ul>
-                                      <li><font color="#006600"><font
-                                              size="3"> Saturday, <br>10am&mdash;7pm</font><font
+                                      <li>
+                                          <p style="margin-top: 0;
+                                            margin-bottom: 0"><font
+                                             color="#006600" size="3"> Saturday, <br>11am&mdash;6pm</font><font
                                             size="3"><br>
                                           </font></font></li>
                                       <font color="#006600"><font
@@ -342,7 +344,7 @@ Sunday, October 7<sup>th</sup> &mdash; 10am to 6pm
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"><font
                                               color="#006600" size="3">
-                                              Sunday, <br>10am&mdash;6pm</font></p>
+                                              Sunday, <br>11am&mdash;5pm</font></p>
                                         </li>
                                       </b>
                                     </ul>
